Fixed text readability

--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,7 @@ input {
   top: 36px;
   left: 36px;
   font-size: 24px;
+  text-shadow: 1px 2px 3px #373434;
 }
 
 .city {
